# internal/dto/user_dto.go
@@ -1,5 +1,11 @@
 package dto
 
+type CreateUserRequest struct {
+	Name     string `json:"name" validate:"required,min=3,max=50"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=6"`
+}
+
 type LoginRequest struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required,min=6"`
